force-app/main/default/objects/Gifting__c/Gifting__c.object-meta.xml
<CustomObject>
    <label>Gifting</label>
    <nameField>
        <displayFormat>GIFT-{0000}</displayFormat>
        <label>Gifting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Giftings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>