force-app/main/default/objects/Gifting__c/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <description>Used to store the house number, street etc.</description>
    <inlineHelpText>Used to store the house number, street etc.</inlineHelpText>
    <label>Address Line 1</label>
    <type>TextArea</type>
</CustomField>