force-app/main/default/objects/Gifting__c/fields/Date_of_Gifting__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Gifting__c</fullName>
    <label>Shipment Date</label>
    <type>Date</type>
</CustomField>