force-app/main/default/objects/Gifting__c/fields/Donor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Donor_Contact__c</fullName>
    <label>Donor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Giftings</relationshipLabel>
    <relationshipName>Giftings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>