force-app/main/default/objects/Gifting__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Year</fullName>
            </value>
            <value>
                <fullName>Janmashtami</fullName>
            </value>
            <value>
                <fullName>Kartik (Diwali)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>