force-app/main/default/objects/Gifting__c/fields/External_Gift_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Gift_ID__c</fullName>
    <formula>IF(
ISPICKVAL(Donor_Contact__r.Account.Account_code__c, &#39;IK&#39;),
(&#39;IK&#39;&amp;&#39;_&#39;&amp;TEXT(MONTH( DATEVALUE(Donor_Contact__r.CreatedDate) ))&amp;&#39;_&#39;&amp;TEXT(YEAR( DATEVALUE(Donor_Contact__r.CreatedDate) ))&amp;&#39;_&#39;&amp;Donor_Contact__r.UUID__c&amp;&#39;_&#39;&amp;Name),  
(&#39;GQ&#39;&amp;&#39;_&#39;&amp;TEXT(MONTH( DATEVALUE(Donor_Contact__r.CreatedDate) ))&amp;&#39;_&#39;&amp;TEXT(YEAR( DATEVALUE(Donor_Contact__r.CreatedDate) ))&amp;&#39;_&#39;&amp;Donor_Contact__r.UUID__c&amp;&#39;_&#39;&amp;Name)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Gift ID</label>
    <type>Text</type>
</CustomField>