force-app/main/default/objects/Gifting__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <label>Full Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>