force-app/main/default/objects/Gifting__c/fields/Gift_Description__c.field-meta.xml
<CustomField>
    <fullName>Gift_Description__c</fullName>
    <label>Gift Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>