force-app/main/default/objects/Gifting__c/fields/Gift_Items__c.field-meta.xml
<CustomField>
    <fullName>Gift_Items__c</fullName>
    <label>Gift Items</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bead Bag</fullName>
            </value>
            <value>
                <fullName>Bhagavad Gita</fullName>
            </value>
            <value>
                <fullName>Cake</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>