force-app/main/default/objects/Gifting__c/fields/GiftCoordinator__c.field-meta.xml
<CustomField>
    <fullName>GiftCoordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Devotee responsible for sending this gift.</description>
    <inlineHelpText>Devotee responsible for sending this gift.</inlineHelpText>
    <label>GiftCoordinator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>GiftCoordinator</relationshipLabel>
    <relationshipName>GiftCoordinator</relationshipName>
    <type>Lookup</type>
</CustomField>