force-app/main/default/objects/Gifting__c/fields/Locality__c.field-meta.xml
<CustomField>
    <fullName>Locality__c</fullName>
    <description>Locality of the donor.</description>
    <inlineHelpText>Locality of the donor.</inlineHelpText>
    <label>Locality</label>
    <type>TextArea</type>
</CustomField>