force-app/main/default/objects/Gifting__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Tracks the status of the gift box in the pipeline.</description>
    <inlineHelpText>Tracks the status of the gift box in the pipeline.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ToBePacked</fullName>
                <default>true</default>
                <label>ToBePacked</label>
            </value>
            <value>
                <fullName>ToBeShipped</fullName>
            </value>
            <value>
                <fullName>InTransit</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>