force-app/main/default/objects/Gifting__c/fields/TrackingNumber__c.field-meta.xml
<CustomField>
    <fullName>TrackingNumber__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The tracking number of the gift sent to the user via courier service.</description>
    <inlineHelpText>The tracking number of the gift sent to the user via courier service.</inlineHelpText>
    <label>Tracking Number</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>