force-app/main/default/objects/Gifting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Donor_Contact__c</columns>
    <columns>Date_of_Gifting__c</columns>
    <columns>Gift_Items__c</columns>
    <columns>Full_Address__c</columns>
    <columns>Gift_Description__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>