force-app/main/default/objects/Gifting__c/listViews/Damaged_Returned_View.listView-meta.xml
<ListView>
    <fullName>Damaged_Returned_View</fullName>
    <columns>NAME</columns>
    <columns>Donor_Contact__c</columns>
    <columns>Status__c</columns>
    <columns>TrackingNumber__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Damaged,Returned</value>
    </filters>
    <label>Damaged/Returned View</label>
</ListView>