force-app/main/default/objects/Gifting__c/listViews/Delivered_View.listView-meta.xml
<ListView>
    <fullName>Delivered_View</fullName>
    <columns>NAME</columns>
    <columns>TrackingNumber__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Delivered</value>
    </filters>
    <label>Delivered View</label>
</ListView>