force-app/main/default/objects/Gifting__c/listViews/Packing_View.listView-meta.xml
<ListView>
    <fullName>Packing_View</fullName>
    <columns>NAME</columns>
    <columns>Donor_Contact__c</columns>
    <columns>Full_Address__c</columns>
    <columns>Gift_Items__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>TrackingNumber__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>ToBePacked</value>
    </filters>
    <label>Packing View</label>
</ListView>