force-app/main/default/objects/Gifting__c/listViews/Shipping_View.listView-meta.xml
<ListView>
    <fullName>Shipping_View</fullName>
    <columns>NAME</columns>
    <columns>Donor_Contact__c</columns>
    <columns>TrackingNumber__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>ToBeShipped</value>
    </filters>
    <label>Shipping View</label>
</ListView>